--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,13 @@
           <ul class="nav">
 
             <li><%= link_to "Home", "/" %></li>
-            <li><%= link_to "Bootstraps", "/bootstraps" %></li>
-            <li><a href="#about">About</a></li>
+
+            <% if session["user_id"].present? %>
+                <li><%= link_to "Sign Out", "/logout" %></li>
+            <% else %>
+                <li><%= link_to 'Sign Up', '/users/new' %></li>
+                <li><%= link_to 'Login', '/login' %></li>
+            <% end %>
           </ul>
         </div>
       </div>
