--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,11 +3,21 @@
 
 <%= form_tag(user_url(@user), method: 'put') do %>
 
+
   <div>
-    <%= label_tag :password_digest %><br />
-    <%= text_field_tag :password_digest, @user.password_digest %>
+    <%= label_tag :name %><br />
+    <%= text_field_tag :name %>
   </div>
 
+<div>
+    <%= label_tag :email %><br />
+    <%= text_field_tag :email %>
+  </div>
+
+<div>
+    <%= label_tag :password %><br />
+    <%= password_field_tag :password %>
+  </div>
   
   <div>
     <%= submit_tag "Update User" %>
