--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,11 @@
   </div>
 
 <div>
+    <%= label_tag :email %><br />
+    <%= text_field_tag :email %>
+  </div>
+
+<div>
     <%= label_tag :password %><br />
     <%= password_field_tag :password %>
   </div>
