--- a/app/views/bottles/index.html.erb
+++ b/app/views/bottles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Bottles</h1>
 
 <p><%= link_to 'Add a New Bottle', new_bottle_url, class: 'btn' %></p>
-<p><%= link_to 'Add a New Occasion', new_occasion_url, class: 'btn' %></p>
+<p><%= link_to 'Add a New Occasion', new_event_url, class: 'btn' %></p>
 <p><%= link_to 'Add a New User', new_user_url, class: 'btn' %></p>
 
 <table class="table table-hover">
