--- a/app/views/bottles/index.html.erb
+++ b/app/views/bottles/index.html.erb
@@ -7,9 +7,9 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Year</th>
-      <th>Color</th>
+      <th><%= sortable "name" %></th>
+      <th><%= sortable "year" %></th>
+      <th><%= sortable "color", "Color of Wine" %></th>
       <th></th>
       <th></th>
       <th></th>
