--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -4,7 +4,8 @@
 <table>
      <tr>
       <td><%= link_to 'Edit this bottle', edit_bottle_url(@bottle), class: 'btn' %></td>
-      <td><%= link_to 'Add occasions', new_occasion_url(@bottles_event), class: 'btn' %></td>
+      <td><%= link_to 'Add occasions', new_occasion_url(@occasion), class: 'btn' %></td>
+      <td><%= link_to 'Add flavor assignments', new_flavorassignment_url(@flavorassignment), class: 'btn' %></td>
     </tr>
 </table>
 
