--- a/app/views/bottles/new.html.erb
+++ b/app/views/bottles/new.html.erb
@@ -4,7 +4,13 @@
 
   <div>
     <%= label_tag :name %><br />
-    <%= text_field_tag :name, "", size: 40, placeholder: "Enter brand name here..."%>
+    <%= text_field_tag :name, "", size: 40, placeholder: "Enter bottle name here..."%>
+  </div>
+
+ <div>
+    <%= label_tag :brand_id %><br />
+    <%= select_tag :brand_id,
+                    options_from_collection_for_select(Brand.order('name asc'), :id, :name) %>
   </div>
 
   <div>
@@ -17,27 +23,17 @@
     <%= text_field_tag :color, "", size: 40, placeholder: "Red, white, rose?"%>
   </div>
 
-  <div>
-    <%= label_tag :varietal %><br />
-    <%= text_field_tag :varietal, "", size: 40, placeholder: "Pinot noir, Merlot, etc."%>
-  </div>
-
 <div>
     <%= label_tag :appellation %><br />
     <%= text_field_tag :appellation, "", size: 40, placeholder: "Where's it from?"%>
   </div>
-  
+
   <div>
     <%= label_tag :style %><br />
     <%= text_field_tag :style, "", size: 40, placeholder: "What's it like?"%>
   </div>
 
-  <div>
-    <%= label_tag :flavors %><br />
-    <%= text_field_tag :flavors, "", size: 40, placeholder: "Cherry, fig, pepper?"%>
-  </div>
-
-  <div>
+   <div>
     <%= label_tag :Alcohol %><br />
     <%= text_field_tag :Alcohol, "", size: 40, placeholder: "How much alcohol? i.e. 12.4"%>
   </div>
@@ -55,11 +51,6 @@
   <div>
     <%= label_tag :picture_id %><br />
     <%= text_field_tag :picture_id, "", size: 40, placeholder: "Where to find a picture"%>
-  </div>
-
-  <div>
-    <%= label_tag :occasion %><br />
-    <%= text_field_tag :occasion, "", size: 40, placeholder: "This wine is perfect for..."%>
   </div>
 
   <div>
