--- a/app/views/flavorassignments/show.html.erb
+++ b/app/views/flavorassignments/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Bottle:</b>
-  <%= @flavorassignment.bottle.name %>
+  <%= @flavorassignment.bottles.name %>
 </p>
 
 <p>
   <b>Flavor:</b>
-  <%= @flavorassignment.flavor.name %>
+  <%= @flavorassignment.flavors.name %>
 </p>
 
 
