Final Project DONE!

--- a/app/views/bottles/edit.html.erb
+++ b/app/views/bottles/edit.html.erb
@@ -49,8 +49,8 @@
   </div>
 
   <div>
-    <%= label_tag :picture_id %><br />
-    <%= text_field_tag :picture_id, @bottle.picture_id, size: 40, placeholder: "Where to find a picture"%>
+    <%= label_tag :picture_source %><br />
+    <%= text_field_tag :picture_source, @bottle.picture_source, size: 40, placeholder: "Name of picture file"%>
   </div>
 
   <div>
